[package]
name = "tiny-ecdh-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde-big-array = { version = "0.5", optional = true }

[build-dependencies]
bindgen = "0.65.1"
cc = { version = "1.0", features = ["parallel"] }

[features]
serde = ["dep:serde", "dep:serde-big-array"]
